examples/test/testpolicy10956.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10956
  namespace: namespace397
spec:
  podSelector:
    matchLabels:
      key36: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value5
          key11: value0
          key15: value49
      podSelector:
        matchLabels:
          key29: value2
          key19: value4
